nest-tax-backend/kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ${NAMESPACE}
  labels:
    service: app
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns01
    cert-manager.io/issue-temporary-certificate: 'true'
spec:
  tls:
  - hosts:
    - ${BRATISKA_HOSTNAME}
    secretName: ${BUILD_REPOSITORY_NAME}-tls
  rules:
  - host: ${BRATISKA_HOSTNAME}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: app
            port:
              number: 80
